force-app/main/default/objects/Application__c/fields/isChangeLeave2__c.field-meta.xml
<CustomField>
    <fullName>isChangeLeave2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>対象物件2入替区分</label>
    <type>Checkbox</type>
</CustomField>