force-app/main/default/objects/Application__c/fields/isChangeLeave3__c.field-meta.xml
<CustomField>
    <fullName>isChangeLeave3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>対象物件3入替区分</label>
    <type>Checkbox</type>
</CustomField>