force-app/main/default/objects/Application__c/fields/IsPet__c.field-meta.xml
<CustomField>
    <fullName>IsPet__c</fullName>
    <label>ペット有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>