force-app/main/default/objects/Application__c/fields/LastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateTime__c</fullName>
    <label>更新日時</label>
    <length>255</length>
    <type>Text</type>
</CustomField>