force-app/main/default/objects/Application__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>入居者氏名_姓</label>
    <length>255</length>
    <type>Text</type>
</CustomField>