force-app/main/default/objects/Application__c/fields/LastNameKana__c.field-meta.xml
<CustomField>
    <fullName>LastNameKana__c</fullName>
    <label>入居者氏名カナ_姓</label>
    <length>255</length>
    <type>Text</type>
</CustomField>