force-app/main/default/objects/Application__c/fields/LeaveRealEstateCategory2__c.field-meta.xml
<CustomField>
    <fullName>LeaveRealEstateCategory2__c</fullName>
    <label>退去物件区分2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>該当</fullName>
            </value>
            <value>
                <fullName>非該当</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>