force-app/main/default/objects/Application__c/fields/LeaveRealEstateDetails2__c.field-meta.xml
<CustomField>
    <fullName>LeaveRealEstateDetails2__c</fullName>
    <label>退去物件内訳2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>