force-app/main/default/objects/Application__c/fields/LeaveScheduledDate3__c.field-meta.xml
<CustomField>
    <fullName>LeaveScheduledDate3__c</fullName>
    <label>対象物件3退去予定日</label>
    <type>Date</type>
</CustomField>