force-app/main/default/objects/Application__c/fields/LeftRoomAbout__c.field-meta.xml
<CustomField>
    <fullName>LeftRoomAbout__c</fullName>
    <label>退去後の部屋について</label>
    <length>255</length>
    <type>Text</type>
</CustomField>