force-app/main/default/objects/Application__c/fields/ListApplication__c.field-meta.xml
<CustomField>
    <fullName>ListApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リスト申請</label>
    <type>Checkbox</type>
</CustomField>