force-app/main/default/objects/Application__c/fields/LivingTogetherType__c.field-meta.xml
<CustomField>
    <fullName>LivingTogetherType__c</fullName>
    <label>同居形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>単身</fullName>
            </value>
            <value>
                <fullName>家族同伴</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>