force-app/main/default/objects/Application__c/fields/MediationAcceptNum__c.field-meta.xml
<CustomField>
    <fullName>MediationAcceptNum__c</fullName>
    <label>斡旋手配別受付番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>