force-app/main/default/objects/Application__c/fields/MediationLinkDataOutputDateTime__c.field-meta.xml
<CustomField>
    <fullName>MediationLinkDataOutputDateTime__c</fullName>
    <label>斡旋連携データ出力日時</label>
    <type>DateTime</type>
</CustomField>