force-app/main/default/objects/Application__c/fields/MediationRequest__c.field-meta.xml
<CustomField>
    <fullName>MediationRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>斡旋依頼</label>
    <type>Checkbox</type>
</CustomField>