force-app/main/default/objects/Application__c/fields/MovedEmail__c.field-meta.xml
<CustomField>
    <fullName>MovedEmail__c</fullName>
    <label>転居後メール</label>
    <type>Email</type>
</CustomField>