force-app/main/default/objects/Application__c/fields/MovedFax__c.field-meta.xml
<CustomField>
    <fullName>MovedFax__c</fullName>
    <label>転居後FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>