force-app/main/default/objects/Application__c/fields/MovedMobile__c.field-meta.xml
<CustomField>
    <fullName>MovedMobile__c</fullName>
    <label>転居後携帯</label>
    <type>Phone</type>
</CustomField>