force-app/main/default/objects/Application__c/fields/MovedPhone__c.field-meta.xml
<CustomField>
    <fullName>MovedPhone__c</fullName>
    <label>退去後TEL</label>
    <type>Phone</type>
</CustomField>