force-app/main/default/objects/Application__c/fields/MoveExpenseNote__c.field-meta.xml
<CustomField>
    <fullName>MoveExpenseNote__c</fullName>
    <label>引越費用負担補足</label>
    <length>255</length>
    <type>Text</type>
</CustomField>