force-app/main/default/objects/Application__c/fields/MoveInAndOutType__c.field-meta.xml
<CustomField>
    <fullName>MoveInAndOutType__c</fullName>
    <label>入退居種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>入居</fullName>
            </value>
            <value>
                <fullName>退去</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>