force-app/main/default/objects/Application__c/fields/MoveReason__c.field-meta.xml
<CustomField>
    <fullName>MoveReason__c</fullName>
    <label>転居理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>