force-app/main/default/objects/Application__c/fields/MoveRequestDate__c.field-meta.xml
<CustomField>
    <fullName>MoveRequestDate__c</fullName>
    <label>引越依頼日</label>
    <type>Date</type>
</CustomField>