force-app/main/default/objects/Application__c/fields/MoveRequestNum__c.field-meta.xml
<CustomField>
    <fullName>MoveRequestNum__c</fullName>
    <label>引越依頼番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>