force-app/main/default/objects/Application__c/fields/MovingAreaCity__c.field-meta.xml
<CustomField>
    <fullName>MovingAreaCity__c</fullName>
    <label>引越先エリア_市町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>