force-app/main/default/objects/Application__c/fields/MovingAreaState__c.field-meta.xml
<CustomField>
    <fullName>MovingAreaState__c</fullName>
    <label>引越先エリア_都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>「1」</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>