force-app/main/default/objects/Application__c/fields/MovingExpense__c.field-meta.xml
<CustomField>
    <fullName>MovingExpense__c</fullName>
    <label>担当引越費用負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>