force-app/main/default/objects/Application__c/fields/MovingExpenseNote__c.field-meta.xml
<CustomField>
    <fullName>MovingExpenseNote__c</fullName>
    <label>担当引越費用負担補足</label>
    <type>TextArea</type>
</CustomField>