force-app/main/default/objects/Application__c/fields/NewAdress2__c.field-meta.xml
<CustomField>
    <fullName>NewAdress2__c</fullName>
    <label>新住所2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>