force-app/main/default/objects/Application__c/fields/NewAdressZipCode__c.field-meta.xml
<CustomField>
    <fullName>NewAdressZipCode__c</fullName>
    <label>新住所郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>