force-app/main/default/objects/Application__c/fields/NewAffiliationAdress1__c.field-meta.xml
<CustomField>
    <fullName>NewAffiliationAdress1__c</fullName>
    <label>新所属住所1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>