force-app/main/default/objects/Application__c/fields/NewAffiliationAdress2__c.field-meta.xml
<CustomField>
    <fullName>NewAffiliationAdress2__c</fullName>
    <label>新所属住所2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>