force-app/main/default/objects/Application__c/fields/NewArea__c.field-meta.xml
<CustomField>
    <fullName>NewArea__c</fullName>
    <label>新所属エリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>