force-app/main/default/objects/Application__c/fields/NewAssignmentTypeDeatils__c.field-meta.xml
<CustomField>
    <fullName>NewAssignmentTypeDeatils__c</fullName>
    <label>新赴任形態内訳</label>
    <length>255</length>
    <type>Text</type>
</CustomField>