force-app/main/default/objects/Application__c/fields/NewCompanyName__c.field-meta.xml
<CustomField>
    <fullName>NewCompanyName__c</fullName>
    <label>新所属会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>