force-app/main/default/objects/Application__c/fields/NewDepartmentSignature__c.field-meta.xml
<CustomField>
    <fullName>NewDepartmentSignature__c</fullName>
    <label>新所属部署名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>