force-app/main/default/objects/Application__c/fields/NewExpenseCode__c.field-meta.xml
<CustomField>
    <fullName>NewExpenseCode__c</fullName>
    <label>新負担先コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>