force-app/main/default/objects/Application__c/fields/NewHouseDetails__c.field-meta.xml
<CustomField>
    <fullName>NewHouseDetails__c</fullName>
    <label>新住居内訳</label>
    <length>255</length>
    <type>Text</type>
</CustomField>