force-app/main/default/objects/Application__c/fields/NewMatterNotCreated__c.field-meta.xml
<CustomField>
    <fullName>NewMatterNotCreated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>新規レコード未作成</label>
    <type>Checkbox</type>
</CustomField>