force-app/main/default/objects/Application__c/fields/NewRealEstateFloor__c.field-meta.xml
<CustomField>
    <fullName>NewRealEstateFloor__c</fullName>
    <label>新物件階数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>