force-app/main/default/objects/Application__c/fields/NewRealEstateFloorPlan__c.field-meta.xml
<CustomField>
    <fullName>NewRealEstateFloorPlan__c</fullName>
    <label>新物件間取</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>「1」</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>