force-app/main/default/objects/Application__c/fields/NewRealEstateType__c.field-meta.xml
<CustomField>
    <fullName>NewRealEstateType__c</fullName>
    <label>新物件タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RealEstateType</valueSetName>
    </valueSet>
</CustomField>