force-app/main/default/objects/Application__c/fields/NewWorkLocationName__c.field-meta.xml
<CustomField>
    <fullName>NewWorkLocationName__c</fullName>
    <label>新勤務地名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>