force-app/main/default/objects/Application__c/fields/NewZipCode__c.field-meta.xml
<CustomField>
    <fullName>NewZipCode__c</fullName>
    <label>新所属郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>