force-app/main/default/objects/Application__c/fields/NumOfCars__c.field-meta.xml
<CustomField>
    <fullName>NumOfCars__c</fullName>
    <label>車台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>