force-app/main/default/objects/Application__c/fields/OtherCarNote__c.field-meta.xml
<CustomField>
    <fullName>OtherCarNote__c</fullName>
    <label>その他車補足</label>
    <length>255</length>
    <type>Text</type>
</CustomField>