force-app/main/default/objects/Application__c/fields/OwendToCompanyComment__c.field-meta.xml
<CustomField>
    <fullName>OwendToCompanyComment__c</fullName>
    <label>SNT宛コメント_企業</label>
    <length>255</length>
    <type>Text</type>
</CustomField>