force-app/main/default/objects/Application__c/fields/OwendToEmployeeComment__c.field-meta.xml
<CustomField>
    <fullName>OwendToEmployeeComment__c</fullName>
    <label>SNT宛コメント_社員</label>
    <length>255</length>
    <type>Text</type>
</CustomField>