force-app/main/default/objects/Application__c/fields/OwnCarModel2__c.field-meta.xml
<CustomField>
    <fullName>OwnCarModel2__c</fullName>
    <label>車種1_個人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>