force-app/main/default/objects/Application__c/fields/OwnCarModel3__c.field-meta.xml
<CustomField>
    <fullName>OwnCarModel3__c</fullName>
    <label>車種2_個人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>