force-app/main/default/objects/Application__c/fields/PackingUnpackingService__c.field-meta.xml
<CustomField>
    <fullName>PackingUnpackingService__c</fullName>
    <label>梱包開梱サービス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>