force-app/main/default/objects/Application__c/fields/PackingUnpackingServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>PackingUnpackingServiceStatus__c</fullName>
    <label>梱包開梱サービス利用状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>利用無し</fullName>
            </value>
            <value>
                <fullName>利用中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>