force-app/main/default/objects/Application__c/fields/PackingUnpackingServiceUseCondition1__c.field-meta.xml
<CustomField>
    <fullName>PackingUnpackingServiceUseCondition1__c</fullName>
    <label>梱包開梱サービス利用条件1</label>
    <type>TextArea</type>
</CustomField>