force-app/main/default/objects/Application__c/fields/PackingUnpackingServiceUseCondition3__c.field-meta.xml
<CustomField>
    <fullName>PackingUnpackingServiceUseCondition3__c</fullName>
    <label>梱包開梱サービス利用条件3</label>
    <type>TextArea</type>
</CustomField>