force-app/main/default/objects/Application__c/fields/PianoInfo__c.field-meta.xml
<CustomField>
    <fullName>PianoInfo__c</fullName>
    <label>ピアノ情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>