force-app/main/default/objects/Application__c/fields/PreviousApplicationFormId__c.field-meta.xml
<CustomField>
    <fullName>PreviousApplicationFormId__c</fullName>
    <externalId>true</externalId>
    <label>前申請書ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>