force-app/main/default/objects/Application__c/fields/PreviousApplicationNo__c.field-meta.xml
<CustomField>
    <fullName>PreviousApplicationNo__c</fullName>
    <label>前申請NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>