force-app/main/default/objects/Application__c/fields/ProxyContact__c.field-meta.xml
<CustomField>
    <fullName>ProxyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>その他窓口</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>申請 (その他窓口)</relationshipLabel>
    <relationshipName>INHV</relationshipName>
    <type>Lookup</type>
</CustomField>