force-app/main/default/objects/Application__c/fields/RealEstate1__c.field-meta.xml
<CustomField>
    <fullName>RealEstate1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対象物件1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RealEstate__c.ContractorName__c</field>
            <operation>equals</operation>
            <valueField>$Source.ApplicantCode__c</valueField>
        </filterItems>
        <filterItems>
            <field>RealEstate__c.Status__c</field>
            <operation>notEqual</operation>
            <value>解約, 管理外</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>申請 (物件ID1)</relationshipLabel>
    <relationshipName>RealEstateId1</relationshipName>
    <type>Lookup</type>
</CustomField>