force-app/main/default/objects/Application__c/fields/RealEstate3Adress__c.field-meta.xml
<CustomField>
    <fullName>RealEstate3Adress__c</fullName>
    <label>物件3住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>