force-app/main/default/objects/Application__c/fields/RealEstateName1__c.field-meta.xml
<CustomField>
    <fullName>RealEstateName1__c</fullName>
    <label>物件名1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>