force-app/main/default/objects/Application__c/fields/RealEstateName2__c.field-meta.xml
<CustomField>
    <fullName>RealEstateName2__c</fullName>
    <label>物件名2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>