force-app/main/default/objects/Application__c/fields/RealEstateName__c.field-meta.xml
<CustomField>
    <fullName>RealEstateName__c</fullName>
    <label>相手先物件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>