force-app/main/default/objects/Application__c/fields/RealEstateRoom__c.field-meta.xml
<CustomField>
    <fullName>RealEstateRoom__c</fullName>
    <label>相手先物件号室</label>
    <length>255</length>
    <type>Text</type>
</CustomField>