force-app/main/default/objects/Application__c/fields/RealEstateType10__c.field-meta.xml
<CustomField>
    <fullName>RealEstateType10__c</fullName>
    <label>物件タイプ10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RealEstateType</valueSetName>
    </valueSet>
</CustomField>