force-app/main/default/objects/Application__c/fields/RealEstateType2__c.field-meta.xml
<CustomField>
    <fullName>RealEstateType2__c</fullName>
    <label>物件タイプ2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RealEstateType</valueSetName>
    </valueSet>
</CustomField>