force-app/main/default/objects/Application__c/fields/RealEstateType4__c.field-meta.xml
<CustomField>
    <fullName>RealEstateType4__c</fullName>
    <label>物件タイプ4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RealEstateType</valueSetName>
    </valueSet>
</CustomField>