force-app/main/default/objects/Application__c/fields/RealEstateTypeNote__c.field-meta.xml
<CustomField>
    <fullName>RealEstateTypeNote__c</fullName>
    <label>物件タイプ補足</label>
    <length>255</length>
    <type>Text</type>
</CustomField>