force-app/main/default/objects/Application__c/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>登記日</label>
    <type>Date</type>
</CustomField>