force-app/main/default/objects/Application__c/fields/RentalEquipmentReturn1__c.field-meta.xml
<CustomField>
    <fullName>RentalEquipmentReturn1__c</fullName>
    <label>レンタル備品返却1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>