force-app/main/default/objects/Application__c/fields/RentRemittanceChangeMonth__c.field-meta.xml
<CustomField>
    <fullName>RentRemittanceChangeMonth__c</fullName>
    <label>家賃送金変更月_末月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>