force-app/main/default/objects/Application__c/fields/RentUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>RentUpperLimit__c</fullName>
    <label>家賃_上限</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>