force-app/main/default/objects/Application__c/fields/ReserveDate1__c.field-meta.xml
<CustomField>
    <fullName>ReserveDate1__c</fullName>
    <label>予備日付１</label>
    <type>Date</type>
</CustomField>