force-app/main/default/objects/Application__c/fields/ReserveDate2__c.field-meta.xml
<CustomField>
    <fullName>ReserveDate2__c</fullName>
    <label>予備日付２</label>
    <type>Date</type>
</CustomField>