force-app/main/default/objects/Application__c/fields/ReserveDate3__c.field-meta.xml
<CustomField>
    <fullName>ReserveDate3__c</fullName>
    <label>予備日付３</label>
    <type>Date</type>
</CustomField>