force-app/main/default/objects/Application__c/fields/ReserveNum5__c.field-meta.xml
<CustomField>
    <fullName>ReserveNum5__c</fullName>
    <label>予備文数値５</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>