force-app/main/default/objects/Application__c/fields/ReserveString3__c.field-meta.xml
<CustomField>
    <fullName>ReserveString3__c</fullName>
    <label>予備文字列３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>