force-app/main/default/objects/Application__c/fields/Resident10Age__c.field-meta.xml
<CustomField>
    <fullName>Resident10Age__c</fullName>
    <label>入居家族10年齢</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>