force-app/main/default/objects/Application__c/fields/Resident10Dependents__c.field-meta.xml
<CustomField>
    <fullName>Resident10Dependents__c</fullName>
    <label>入居家族10扶養</label>
    <length>255</length>
    <type>Text</type>
</CustomField>