force-app/main/default/objects/Application__c/fields/Resident10Job__c.field-meta.xml
<CustomField>
    <fullName>Resident10Job__c</fullName>
    <label>入居家族10職業</label>
    <length>255</length>
    <type>Text</type>
</CustomField>