force-app/main/default/objects/Application__c/fields/Resident10Note__c.field-meta.xml
<CustomField>
    <fullName>Resident10Note__c</fullName>
    <label>入居家族10備考</label>
    <type>TextArea</type>
</CustomField>