force-app/main/default/objects/Application__c/fields/Resident1Job__c.field-meta.xml
<CustomField>
    <fullName>Resident1Job__c</fullName>
    <label>入居家族1職業</label>
    <length>255</length>
    <type>Text</type>
</CustomField>