force-app/main/default/objects/Application__c/fields/Resident2Age__c.field-meta.xml
<CustomField>
    <fullName>Resident2Age__c</fullName>
    <label>入居家族2年齢</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>