force-app/main/default/objects/Application__c/fields/Resident2Dependents__c.field-meta.xml
<CustomField>
    <fullName>Resident2Dependents__c</fullName>
    <label>入居家族2扶養</label>
    <length>255</length>
    <type>Text</type>
</CustomField>