force-app/main/default/objects/Application__c/fields/Resident2Name__c.field-meta.xml
<CustomField>
    <fullName>Resident2Name__c</fullName>
    <label>入居家族2氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>