force-app/main/default/objects/Application__c/fields/Resident2Note__c.field-meta.xml
<CustomField>
    <fullName>Resident2Note__c</fullName>
    <label>入居家族2備考</label>
    <type>TextArea</type>
</CustomField>