force-app/main/default/objects/Application__c/fields/Resident2Relationship__c.field-meta.xml
<CustomField>
    <fullName>Resident2Relationship__c</fullName>
    <label>入居家族2続柄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>