force-app/main/default/objects/Application__c/fields/Resident3Birthday__c.field-meta.xml
<CustomField>
    <fullName>Resident3Birthday__c</fullName>
    <label>入居家族3生年月日</label>
    <type>Date</type>
</CustomField>