force-app/main/default/objects/Application__c/fields/Resident3Name__c.field-meta.xml
<CustomField>
    <fullName>Resident3Name__c</fullName>
    <label>入居家族3氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>