force-app/main/default/objects/Application__c/fields/Resident3Note__c.field-meta.xml
<CustomField>
    <fullName>Resident3Note__c</fullName>
    <label>入居家族3備考</label>
    <type>TextArea</type>
</CustomField>