force-app/main/default/objects/Application__c/fields/Resident4Birthday__c.field-meta.xml
<CustomField>
    <fullName>Resident4Birthday__c</fullName>
    <label>入居家族4生年月日</label>
    <type>Date</type>
</CustomField>