force-app/main/default/objects/Application__c/fields/Resident4Dependents__c.field-meta.xml
<CustomField>
    <fullName>Resident4Dependents__c</fullName>
    <label>入居家族4扶養</label>
    <length>255</length>
    <type>Text</type>
</CustomField>