force-app/main/default/objects/Application__c/fields/Resident4Job__c.field-meta.xml
<CustomField>
    <fullName>Resident4Job__c</fullName>
    <label>入居家族4職業</label>
    <length>255</length>
    <type>Text</type>
</CustomField>