force-app/main/default/objects/Application__c/fields/Resident4Relationship__c.field-meta.xml
<CustomField>
    <fullName>Resident4Relationship__c</fullName>
    <label>入居家族4続柄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>