force-app/main/default/objects/Application__c/fields/Resident5Birthday__c.field-meta.xml
<CustomField>
    <fullName>Resident5Birthday__c</fullName>
    <label>入居家族5生年月日</label>
    <type>Date</type>
</CustomField>