force-app/main/default/objects/Application__c/fields/Resident5Name__c.field-meta.xml
<CustomField>
    <fullName>Resident5Name__c</fullName>
    <label>入居家族5氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>