force-app/main/default/objects/Application__c/fields/Resident7Relationship__c.field-meta.xml
<CustomField>
    <fullName>Resident7Relationship__c</fullName>
    <label>入居家族7続柄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>