force-app/main/default/objects/Application__c/fields/ResidentChildNum__c.field-meta.xml
<CustomField>
    <fullName>ResidentChildNum__c</fullName>
    <label>入居家族子供数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>