force-app/main/default/objects/Application__c/fields/ResidentNum__c.field-meta.xml
<CustomField>
    <fullName>ResidentNum__c</fullName>
    <label>入居家族数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>