force-app/main/default/objects/Application__c/fields/Room2__c.field-meta.xml
<CustomField>
    <fullName>Room2__c</fullName>
    <label>号室_部屋番号_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>