force-app/main/default/objects/Application__c/fields/SecurityDepositBurdener__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositBurdener__c</fullName>
    <label>敷金負担者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>