force-app/main/default/objects/Application__c/fields/SendingDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>SendingDesiredDate__c</fullName>
    <label>発送希望日</label>
    <type>Date</type>
</CustomField>