force-app/main/default/objects/Application__c/fields/SendingDesiredDateMorningAfternoon__c.field-meta.xml
<CustomField>
    <fullName>SendingDesiredDateMorningAfternoon__c</fullName>
    <label>発送希望日_午前午後</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>午前</fullName>
            </value>
            <value>
                <fullName>午後</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>