force-app/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>承認ステップ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>申請待ち</fullName>
            </value>
            <value>
                <fullName>確認中</fullName>
            </value>
            <value>
                <fullName>受付済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>