force-app/main/default/objects/Application__c/fields/ToApplicantComment__c.field-meta.xml
<CustomField>
    <fullName>ToApplicantComment__c</fullName>
    <label>申請者宛コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>