force-app/main/default/objects/Application__c/fields/ToSNTComment__c.field-meta.xml
<CustomField>
    <fullName>ToSNTComment__c</fullName>
    <label>SNT連絡事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>