force-app/main/default/objects/Application__c/fields/TraderArrangement__c.field-meta.xml
<CustomField>
    <fullName>TraderArrangement__c</fullName>
    <label>業者手配</label>
    <length>255</length>
    <type>Text</type>
</CustomField>