force-app/main/default/objects/Application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>申請種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>入居申請</fullName>
            </value>
            <value>
                <fullName>退去申請</fullName>
            </value>
            <value>
                <fullName>転居申請</fullName>
            </value>
            <value>
                <fullName>駐車場利用申請</fullName>
            </value>
            <value>
                <fullName>駐車場利用停止申請</fullName>
            </value>
            <value>
                <fullName>駐車場借換申請</fullName>
            </value>
            <value>
                <fullName>その他申請</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>