force-app/main/default/objects/Application__c/fields/UseGarage__c.field-meta.xml
<CustomField>
    <fullName>UseGarage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>駐車場使用</label>
    <type>Checkbox</type>
</CustomField>