force-app/main/default/objects/Application__c/recordTypes/Delete.recordType-meta.xml
<RecordType>
    <fullName>Delete</fullName>
    <active>true</active>
    <label>削除申請</label>
</RecordType>