force-app/main/default/objects/Application__c/recordTypes/Move.recordType-meta.xml
<RecordType>
    <fullName>Move</fullName>
    <active>true</active>
    <label>転居申請</label>
</RecordType>