force-app/main/default/objects/Application__c/recordTypes/MoveIn.recordType-meta.xml
<RecordType>
    <fullName>MoveIn</fullName>
    <active>true</active>
    <label>入居申請</label>
</RecordType>