force-app/main/default/objects/Application__c/recordTypes/Moving.recordType-meta.xml
<RecordType>
    <fullName>Moving</fullName>
    <active>true</active>
    <label>引越申請</label>
</RecordType>